--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="SoundSearchIcon"
                   android:label="@string/app_name"
-                  android:excludeFromRecents="true">
+                  android:excludeFromRecents="true"
+                  android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
